# DarkWorld

./: README.md
projects/: Makefile
projects/client/src/: index.html
projects/server/: CMakeLists.txt  compile_commands.json  xmake.lua
projects/server/.xmake/linux/x86_64/: xmake.conf
projects/server/.xmake/linux/x86_64/cache/: config  detect  history  package  references  toolchain
projects/server/src/: main.cpp
projects/server/src/core/: server.cpp
src/: Makefile
src/client/: compile_commands.json
src/server/: CMakeLists.txt
src/server/src/: main.cpp
